# sundog

./: .clang-format  .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  README.md  format_code.sh  meson.build  meson_options.txt  run_tests.sh  test_tools.sh
.github/workflows/: ci_meson.yml
doc/: bootstrap.md  debugging.md  disklayout.md  further-analysis.md  gamestate.md  image_compression.md  notes.md  p_systems_glossary.md  sundog_dialog_system.md  tools.md  weirddiskscan_debug.md
shaders/: screen-hq4x.frag  screen-hq4x.vert  screen-hqish.frag  screen-hqish.vert  screen.frag  screen.vert  swoosh.frag  swoosh.vert
src/: .gitignore  Makefile  game_renderer.h  glutil.c  glutil.h  meson.build  renderer_basic.c  renderer_hq4x.c  rip_images.c  sundog.c  sundog.h  sundog_compare_trace.c  sundog_resources.c  sundog_resources.h  swoosh.c  swoosh.h
src/compat/: compat_fcntl.h  compat_unistd.h
src/debugui/: debugui.cpp  debugui.h
src/game/: game_debug.c  game_debug.h  game_debuginfo.h  game_gembind.c  game_gembind.h  game_screen.c  game_screen.h  game_shiplib.c  game_shiplib.h  game_sound.c  game_sound.h  meson.build  sundog_soundfx.h  wowzo.c  wowzo.h
src/glxw/: glxw_es3.c
src/imgui/: imgui_impl_sdl_gles2.cpp  imgui_impl_sdl_gles2.h
src/psys/: psys_bootstrap.c  psys_bootstrap.h  psys_constants.h  psys_debug.c  psys_debug.h  psys_helpers.h  psys_interpreter.c  psys_interpreter.h  psys_opcodes.c  psys_opcodes.h  psys_registers.c  psys_registers.h  psys_rsp.c  psys_rsp.h  psys_save_state.c  psys_save_state.h  psys_set.c  psys_set.h  psys_state.h  psys_task.c  psys_task.h  psys_types.h
src/test/: img_tests.c  inst_tests.c  meson.build  set_tests.c  test_common.h  test_util.c  test_util.h
src/util/: compat.h  debugger.c  debugger.h  memutil.h  util_img.c  util_img.h  util_minmax.h  util_save_state.h  util_time.c  util_time.h  write_bmp.c  write_bmp.h
tools/: analyze_dump.py  appcalls_deltas.py  appcalls_hierarchy.py  appcalls_list.py  code.py  compute_checksums.py  convert_traces.py  decompile.py  disass.py  dump_collision_table.py  dump_shiplib19_data.py  dump_sprites.py  dump_text.py  endian.py  extract_gfx.py  extract_sounds.py  gen_debug_info.py  gen_interpreter.py  glxw_gen.py  interp_table.py  libcalls_deltas.py  libcalls_hierarchy.py  libcalls_list.py  list_pcode.py  metadata.py  opcodes.py  pme_defs.py  printable.py  resource_compiler.py  segdir.py  signext.py  sundog_info.py  textutil.py
tools/decompiler/: basicblock.py  dataflow.py  expression.py  statement.py
tools/dosound/: .gitignore  Makefile  README.md  dosound.c  emu2149.c
tools/hatari/: event.hatari  sysstat.hatari  tracepoint.hatari
